--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -32,7 +32,6 @@ using System;
 using System.Collections.Generic;
 using System.Diagnostics;
 using System.Text;
-using Alba.CsCss;
 using Alba.CsCss.Extensions;
 using Alba.CsCss.Gfx;
 
@@ -102,6 +101,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"NS_GET_([RGBA])\((\w+)\)", "$2.$1")
             .ReReplace(@"NS_(?<Method>HexToRGB|ColorNameToRGB)\((?<Args>"+sArgs+@"), &(?<Result>\w+)\)", "nscolor.${Method}(${Args}, ref ${Result})")
             .ReReplace(@"NS_(?<Method>HSL2RGB)\((?<Args>"+sArgs+@")\)", "nscolor.${Method}(${Args})")
+            .ReReplace(@"(?<Var>\w+).Rebind\(\k<Var>, (?<Value>\d+)\);", "${Var} = ${Var}.Substring(${Value});") // nsDependentString.Rebind
 
             // specific preprocessor
             .ReReplace(@"REPORT_UNEXPECTED\((\w+)\)",
@@ -121,11 +121,11 @@ namespace Alba.CsCss.Style
             .ReReplace(@"CLEAR_ERROR\(\)",
                         "mReporter.ClearError()")
             .ReReplace(@"NS_FOR_CSS_SIDES ?\((?<Var>\w+)\)", "for (Side ${Var} = nsStyle.SIDE_TOP; ${Var} <= nsStyle.SIDE_LEFT; ${Var}++)")
-            .ReReplace(@"\[(side|index)\]", "[(int)$1]")
             .ReReplace(@"{ STR_WITH_LEN\((""\w+"")\), (\w+), (\w+) }", "new UnitInfo { name = $1, unit = $2, type = $3 }")
             // specific code removal
             .ReReplace(@"(?s)struct UnitInfo {.*?\n};\n", "")
             .ReReplace(@"(?s)struct NS_STACK_CLASS ExtractFirstFamilyData {.*?\n};\n", "")
+            .ReReplace(@"(?s)struct ReduceNumberCalcOps :.*?\n};\n", "")
             //.ReReplace(@"(?s)nsCSSScanner::nsCSSScanner\(StringBuilder aBuffer, uint32_t aLineNumber\).*?\n}\n", "")
             //.ReReplace(@"(?s)nsCSSScanner::~nsCSSScanner\(\).*?\n}\n", "")
             //.ReReplace(@"(?s)void\s+nsCSSScanner::StopRecording\(StringBuilder aBuffer\).*?\n}\n", "")
@@ -140,14 +140,15 @@ namespace Alba.CsCss.Style
                             "ErrorReporter|Rule|StyleRule|CharsetRule|GroupRule|MediaRule|DocumentRule|ImportRule|Declaration|BackgroundParseState|"+
                             "nsMediaExpression|nsMediaFeature|nsCSSSelector|nsSelectorParsingStatus|PriorityParsingStatus|"+
                             "nsCSSValuePairList|nsCSSValueList|nsCSSRect|nsCSSFontFaceRule|NameSpaceRule|URLValue|nsCSSValueGradient|"+
-                            "nsCSSValueGradientStop|nsCSSTokenType|ExtractFirstFamilyData"+
+                            "nsCSSValueGradientStop|nsCSSTokenType|ExtractFirstFamilyData|"+
+                            "ComputeCalc"+ // static method
                        @")\b(?<Space> )?[*&]?", "${Name}${Space}")
             .Replace(@"const int32_t *&", "ref int32_t[]")
             .ReReplace(@"(?n)\b(?<Name>"+
                             "u?int\\d+_t|bool|float|Rule|StyleRule|Declaration|nsCSSSelectorList|nsMediaQuery|nsCSSValuePair|nscolor"+
                        @")\b(?<Space> )?[*&]", "ref ${Name}${Space}")
             .ReReplace(@"nsIURI\*?", "Uri")
-            .ReReplace(@"(const )?\b(nsString|nsAString|nsSubstring|nsAutoString)\b[*&]?", "string")
+            .ReReplace(@"(const )?\b(nsString|nsAString|nsSubstring|nsAutoString|nsDependentString)\b[*&]?", "string")
             .ReReplace(@"(?n)(const )?(char)(?<Space> ?)\*", "string${Space}")
             .Replace(@"nsCSSScanner&", "nsCSSScanner")
             .Replace(@"mozilla::css::Loader*", "CssLoader")
@@ -187,7 +188,9 @@ namespace Alba.CsCss.Style
             .Replace(@"bool (*parseFunc)(RuleAppendFunc, void*)", "Func<RuleAppendFunc, object, bool> parseFunc")
             .Replace(@"(this->*parseFunc)", "parseFunc")
             .Replace(@"const UnitInfo", "static UnitInfo")
+            .Replace(@"tmp(tk.mIdentStr, 0)", "tmp(tk.mIdentStr)")
             .ReReplace(@"mToken\.mIdentStr \+ (\d+)", "mToken.mIdentStr.Substring($1)")
+            .ReReplace(@"(?<Var>\w+)\.\*\(nsCSSRect::sides\[(?<Index>\w+)\]\)", "${Var}[${Index}]")
             .ReReplace(@"(?ns)(?<Type>nsAutoParseCompoundProperty|nsAutoFailingSupportsRule|nsAutoSuppressErrors) "+ // RAII structs
                        @"(?<Var>\w+)\((?<Args>"+sArgs+@")\);(?<Code>.*?)\n}\n",
                        m => "using (/*var "+m.Get("Var")+" = */new "+m.Get("Type")+"("+m.Get("Args")+")) {"+m.Get("Code").Indent(2)+"\n  }\n}\n")
@@ -205,11 +208,11 @@ namespace Alba.CsCss.Style
             // specific expressions: constructors
             .ReReplace(@"(?<Type>nsCSSFontFaceRule|nsCSSSelectorList) (?<Var>\w+)\(new \k<Type>\((?<Args>"+sArgs+@")?\)\);", "var ${Var} = new ${Type}(${Args});") // Type Var(new Type()) -> var Var = new Var(Args)
             .ReReplace(@"(?<Type>nsCSSValue|BackgroundParseState) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "var ${Var} = new ${Type}(${Args});") // Type Var(Args) -> var Var = new Var(Args)
-            .ReReplace(@"(?<Type>nsCSSValue|nsCSSValueList|bool) +(?<Var>\w+)\[(?<Size>\w+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
+            .ReReplace(@"(?<Type>nsCSSValue|nsCSSValueList|bool) +(?<Var>\w+)\[(?<Size>[\w\.]+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
             .ReReplace(@"(?<Type>Declaration|string) +(?<Var>\w+)\((?<Args>"+sArgs+@")\);", "${Type} ${Var} = ${Args};") // Type Var(Args) -> Type Var = Args
-            .ReReplace(@"(?<Type>nsCSSValuePair|List<float>|nscolor) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
+            .ReReplace(@"(?<Type>nsCSSValuePair|ReduceNumberCalcOps|List<float>|nscolor) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
             .ReReplace(@"(?<Type>nsCSSUnit|u?int\d+_t) (?<Var>\w+);", "${Type} ${Var} = 0;") // int Var -> int Var = 0
-            .ReReplace(@"bool (conditionMet|hitStop|rv|haveWS);", "bool $1 = false;") // bool Var -> bool Var = false
+            .ReReplace(@"bool (conditionMet|hitStop|rv|haveWS|useCommas);", "bool $1 = false;") // bool Var -> bool Var = false
             .ReReplace(@"string +\b(prefix|url|urlString)\b;", "string $1 = \"\";") // string Var -> string Var = ""
             .ReReplace(@"(?<!new )(?<Type>nsCSSValue)\(", "new ${Type}(") // Type Var[Size] -> Type(...) -> new Type(...)
             .Replace(@"nsAutoTArray<char, 16> stack;", "var stack = new List<char>(16);")
@@ -220,9 +223,9 @@ namespace Alba.CsCss.Style
             .ReReplace(@"if \((mSheet|mChildLoader|mNameSpaceMap|lastRule|declaration|pseudoElement|query|kid)\)", "if ($1 != null)")
             .ReReplace(@"if \(!\((mSheet|aSheetPrincipal|aBaseURI|aSheetURI|aNodePrincipal|aDeclaration)\)\)", "if ($1 == null)")
             // specific expressions: declarations
+            .Replace(@"static const uint8_t kVariantMaskLengths[eNumVariantMasks]", "/*TODO: static*/ uint8_t[] kVariantMaskLengths")
             .Replace(@"static const int32_t kVariantMasks[eNumVariantMasks][kMaxElemsPerFunction]", "/*TODO: static*/ int32_t[][] kVariantMasks")
             .Replace(@"{VARIANT_", "new[] {VARIANT_")
-            .Replace(@"static const uint8_t kVariantMaskLengths[eNumVariantMasks]", "/*TODO: static*/ uint8_t[] kVariantMaskLengths")
             // specific expressions: arg declarations
             .ReReplace(@"bool (aInsideBraces)", "bool $1 = false")
             .ReReplace(@"bool (aAllowExplicitCenter)", "bool $1 = true")
@@ -275,8 +278,8 @@ namespace Alba.CsCss.Style
             .ReReplace(@"// fall through(?<Space>\s+)(?<Case>default|case .*):", "goto ${Case};${Space}${Case}:")
             //.ReReplace(@"\) const\n", ")\n") // const functions
             //.ReReplace(@"inline", "")
-            //.ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
-            //.ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // cast inside cast
+            .ReReplace(@"(u?int\d+_t|double)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
+            //.ReReplace(@"(u?int\d+_t|double)\((" + sArgs + @")\)", "(($1)($2))") // cast inside cast
             .ReReplace(@"(?i)\b(\d)+u\b", "$1") // no suffix for ushort
             .ReReplace(@"->", ".")
             .ReReplace(@"::", ".")
