--- a/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
@@ -52,7 +52,8 @@ using Alba.CsCss.Internal;
 
 namespace Alba.CsCss.Style
 {
-    internal static partial class nsCSSPseudoClasses {
+    internal static partial class nsCSSPseudoClasses
+    {
         private static readonly IDictionary<string, nsCSSPseudoClass> sPseudoClasses =
             new Dictionary<string, nsCSSPseudoClass>(ReferenceEqualityComparer<object>.Default) {
 <#+           foreach (CssPseudoClass cls in GetCssPseudoClasses()) { #>
